--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,7 +21,7 @@ spring:
   # todo 需替换配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://47.103.119.75:3306/xoj_backend
+    url: jdbc:mysql://47.103.119.75:3306/xoj
     username: root
     password: 200424zlx
   # Redis 配置
@@ -90,3 +90,7 @@ cos:
     secretKey: xxx
     region: xxx
     bucket: xxx
+# 代码沙箱配置
+codesandbox:
+  type: example
+
