--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,9 @@ spring:
   # session 配置
   session:
     # todo 取消注释开启分布式 session（须先配置 Redis）
-    # store-type: redis
+     store-type: redis
     # 30 天过期
-    timeout: 2592000
+     timeout: 2592000
   # 数据库配置
   # todo 需替换配置
   datasource:
@@ -26,12 +26,12 @@ spring:
     password: 200424zlx
   # Redis 配置
   # todo 需替换配置，然后取消注释
-#  redis:
-#    database: 1
-#    host: localhost
-#    port: 6379
-#    timeout: 5000
-#    password: 123456
+  redis:
+    database: 1
+    host: 47.103.119.75
+    port: 6379
+    timeout: 5000
+    password: 200424zlx
   # Elasticsearch 配置
   # todo 需替换配置，然后取消注释
 #  elasticsearch:
@@ -92,5 +92,5 @@ cos:
     bucket: xxx
 # 代码沙箱配置
 codesandbox:
-  type: example
+  type: remote
 
